--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,9 +17,11 @@ keywords = [
 cfg-if = "1.0.0"
 chrono = { version = "0.4.35", features = ["clock"], optional = true }
 hashbrown = { version = "0.14.3", optional = true }
+httparse = { version = "1.8.0", optional = true }
 parking_lot = { version = "0.12.1", optional = true }
 thiserror = { version = "1.0.58", optional = true }
 tokio = { version = "1.36.0", features = ["full"], optional = true }
+url = { version = "2.5.0", optional = true }
 
 [dev-dependencies]
 criterion = { version = "0.5.1", features = ["html_reports"] }
@@ -41,7 +43,7 @@ h = ["dep:thiserror"]
 hex = ["dep:thiserror"]
 lazy-wrap = ["dep:parking_lot"]
 string-pool = ["dep:hashbrown", "lazy-wrap"]
-ws = []
+ws = ["dep:httparse", "dep:thiserror", "dep:url"]
 z85 = ["dep:thiserror"]
 
 # runtime selection features
