some... stuff on a custom binary serialiser/deserialiser

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -42,6 +42,7 @@ debounce = ["dep:chrono"]
 h = ["dep:thiserror"]
 hex = ["dep:thiserror"]
 lazy-wrap = ["dep:parking_lot"]
+serialiser = []
 string-pool = ["dep:hashbrown", "lazy-wrap"]
 # ws = ["dep:httparse", "dep:thiserror", "dep:url"]
 z85 = ["dep:thiserror"]
