--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ cfg-if = "1.0.0"
 chrono = { version = "0.4.35", features = ["clock"], optional = true }
 hashbrown = { version = "0.14.3", optional = true }
 httparse = { version = "1.8.0", optional = true }
+ordered-float = { version = "4.2.0", optional = true }
 parking_lot = { version = "0.12.1", optional = true }
 thiserror = { version = "1.0.58", optional = true }
 tokio = { version = "1.36.0", features = ["full"], optional = true }
@@ -42,7 +43,7 @@ debounce = ["dep:chrono"]
 h = ["dep:thiserror"]
 hex = ["dep:thiserror"]
 lazy-wrap = ["dep:parking_lot"]
-serialiser = []
+serialiser = ["dep:hashbrown", "dep:ordered-float",  "dep:thiserror"]
 string-pool = ["dep:hashbrown", "lazy-wrap"]
 # ws = ["dep:httparse", "dep:thiserror", "dep:url"]
 z85 = ["dep:thiserror"]
