--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,7 @@ keywords = [
 [dependencies]
 cfg-if = "1.0.0"
 chrono = { version = "0.4.35", features = ["clock"], optional = true }
-hashbrown = { version = "0.14.3", optional = true }
+hashbrown = { version = "0.14.3", features = ["ahash"], optional = true }
 httparse = { version = "1.8.0", optional = true }
 ordered-float = { version = "4.2.0", optional = true }
 parking_lot = { version = "0.12.1", optional = true }
