remove thiserror from serialiser in favour of manual impl
we don't need "{0}", we only need write_str

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -43,7 +43,7 @@ debounce = ["dep:chrono"]
 h = ["dep:thiserror"]
 hex = ["dep:thiserror"]
 lazy-wrap = ["dep:parking_lot"]
-serialiser = ["dep:hashbrown", "dep:ordered-float",  "dep:thiserror"]
+serialiser = ["dep:hashbrown", "dep:ordered-float"]
 string-pool = ["dep:hashbrown", "lazy-wrap"]
 # ws = ["dep:httparse", "dep:thiserror", "dep:url"]
 z85 = ["dep:thiserror"]
