--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ hashbrown = { version = "0.14.3", features = ["ahash"], optional = true }
 httparse = { version = "1.8.0", optional = true }
 ordered-float = { version = "4.2.0", optional = true }
 parking_lot = { version = "0.12.1", optional = true }
+serde_json = { version = "1.0.116", optional = true }
 thiserror = { version = "1.0.58", optional = true }
 tokio = { version = "1.36.0", features = ["full"], optional = true }
 url = { version = "2.5.0", optional = true }
@@ -54,6 +55,8 @@ tokio = ["dep:tokio"]
 # config options for certain features
 # compiler errors if the feature its for isn't enabled
 debounce-dyn-fn = []
+serialiser-hashbrown = ["dep:hashbrown"]
+serialiser-serde-json = ["dep:serde_json"]
 
 [[bench]]
 name = "hex-and-z85"
