--- a/Cargo.toml
+++ b/Cargo.toml
@@ -69,14 +69,6 @@ harness = false
 [profile.bench]
 lto = "thin"
 
-[[bin]]
-name = "generate-hex-table-decoder"
-required-features = ["hex"]
-
-[[bin]]
-name = "generate-z85-table-decoder"
-required-features = ["z85"]
-
 [package.metadata.docs.rs]
 # https://docs.rs/about/metadata
 
@@ -101,4 +93,9 @@ targets = [
 	"x86_64-apple-darwin",
 	"x86_64-unknown-linux-gnu",
 	"x86_64-pc-windows-msvc"
+]
+
+[workspace]
+members = [
+	"scripts"
 ]
