--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,6 +36,8 @@ z85 = "3.0.5"
 # Make sure to check README and workflow files too
 # Also check below, docs.rs config
 
+unstable = []
+
 # base16 = ["dep:thiserror", "hex"]
 # base32 = ["dep:thiserror"]
 # base64 = ["dep:thiserror"]
