--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ keywords = [
 [dependencies]
 argon2 = { version = "0.5.3", optional = true }
 cfg-if = "1.0.0"
+chacha20poly1305 = { version = "0.10.1", optional = true }
 chrono = { version = "0.4.35", optional = true, features = ["clock"] }
 hashbrown = { version = "0.14.3", optional = true, features = ["ahash"] }
 httparse = { version = "1.8.0", optional = true }
@@ -43,6 +44,7 @@ unstable = []
 
 auth = [
 	"dep:argon2",
+	"dep:chacha20poly1305",
 	"dep:p384",
 	"dep:rand",
 	"dep:thiserror",
