--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,6 +29,7 @@ serde_json = { version = "1.0.116", optional = true }
 thiserror = { version = "1.0.58", optional = true }
 tokio = { version = "1.36.0", optional = true, features = ["full"] }
 url = { version = "2.5.0", optional = true }
+uuid = { version = "1.8.0", optional = true }
 zeroize = { version = "1.7.0", optional = true }
 
 [dev-dependencies]
@@ -78,11 +79,15 @@ h = [
 hex = [
 	"dep:thiserror"
 ]
+id = [
+	"dep:rand"
+]
 lazy-wrap = [
 	"dep:parking_lot"
 ]
 lsl = [
-	"dep:hashbrown"
+	"dep:hashbrown",
+	"dep:uuid"
 ]
 serialiser = [
 	"dep:ordered-float"
