--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,7 @@ p384 = { version = "0.13.0", optional = true }
 parking_lot = { version = "0.12.1", optional = true }
 rand = { version = "0.8.5", optional = true }
 serde_json = { version = "1.0.116", optional = true }
+spin_sleep = { version = "1.2.0", optional = true }
 thiserror = { version = "1.0.58", optional = true }
 tokio = { version = "1.36.0", optional = true, features = ["full"] }
 url = { version = "2.5.0", optional = true }
@@ -87,7 +88,10 @@ lazy-wrap = [
 ]
 lsl = [
 	"dep:hashbrown",
-	"dep:uuid"
+	"dep:spin_sleep",
+	"dep:uuid",
+	"hex",
+	"id"
 ]
 serialiser = [
 	"dep:ordered-float"
