...still need this, whoops
ex. testing with only feature `string-pool` would die without this whoopsie

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,6 +36,7 @@ zeroize = { version = "1.7.0", optional = true }
 [dev-dependencies]
 criterion = { version = "0.5.1", features = ["html_reports"] }
 hex = "0.4.3"
+rand = "0.8.5"
 z85 = "3.0.5"
 
 [features]
