--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,8 +16,7 @@ jobs:
       matrix:
         featureflags:
         # Make sure to check README and Cargo.toml too
-        - clock-timer-2,debounce,h,hex,lazy-wrap,lsl,serialiser,string-pool,z85
-        # - clock-timer-2,debounce,h,hex,lazy-wrap,lsl,serialiser,string-pool,z85,debounce-dyn-fn
+        - unstable,auth,clock-timer-2,debounce,h,hex,id,lazy-wrap,lsl,serialiser,string-pool,z85
 
         runtimes:
         - tokio
