--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -13,8 +13,8 @@ jobs:
       matrix:
         featureflags:
         # Make sure to check README and Cargo.toml too
-        - unstable,auth,clock-timer-2,debounce,h,hex,id,lazy-wrap,lsl,serialiser,string-pool,z85
-        - unstable,auth,clock-timer-2,debounce,h,hex,id,lazy-wrap,lsl,serialiser,string-pool,z85,debounce-dyn-fn
+        - unstable,auth,chaining,clock-timer-2,debounce,h,hex,id,lazy-wrap,lsl,serialiser,string-pool,z85
+        - unstable,auth,chaining,clock-timer-2,debounce,h,hex,id,lazy-wrap,lsl,serialiser,string-pool,z85,debounce-dyn-fn
 
         runtimes:
         - tokio
