misc cleanup and stuff
- removed old clock timer, and clock-timer-2 -> clock-timer
- add ID to readme
- commented out mods in lib.rs that didn't have (uncommented) feature in Cargo.toml
- updated workflow files

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,7 +16,7 @@ jobs:
       matrix:
         featureflags:
         # Make sure to check README and Cargo.toml too
-        - unstable,auth,chaining,clock-timer-2,debounce,h,hex,id,lazy-wrap,lsl,serialiser,string-pool,z85
+        - unstable,auth,chaining,clock-timer,debounce,h,hex,id,lazy-wrap,lsl,serialiser,string-pool,z85
 
         runtimes:
         - tokio
