actually, don't test unstable features during release

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -13,8 +13,8 @@ jobs:
       matrix:
         featureflags:
         # Make sure to check README and Cargo.toml too
-        - all-unstable
-        - all-unstable,debounce-dyn-fn
+        - all
+        - all,debounce-dyn-fn
 
     steps:
     - name: checkout code
