--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,7 +10,14 @@ env:
 jobs:
   test:
     name: run
-    runs-on: ubuntu-22.04
+    runs-on: ${{ matrix.runs-on }}
+
+    strategy:
+      matrix:
+        runs-on:
+        - ubuntu-22.04
+        - ubuntu-24.04
+        - macos-14
 
     steps:
     - name: checkout code
