--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.5.4"
 description = "A library, of, Stuff™"
 edition = "2021"
 authors = ["Meadowsys"]
-repository = "https://github.com/meadowsys/wiwi.git"
+repository = "https://github.com/meadowsys/wiwi"
 license = "MIT"
 keywords = [
 	"decode",
