discovered some.. whoopsies
wrote smol fish script to loop all the (manually hardcoded into the script ><) features and compile/test them in isolation, both debug and release too, which to be honest should be a thing done in CI

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -153,7 +153,10 @@ string-pool-unstable = [
 	"dep:hashbrown",
 	"lazy-wrap"
 ]
-sudoku-unstable = []
+sudoku-unstable = [
+	"chainer-unstable",
+	"iter-unstable"
+]
 superstring-unstable = []
 to-maybeuninit = []
 # ws = [
