--- a/Cargo.toml
+++ b/Cargo.toml
@@ -128,6 +128,7 @@ bigint-unstable = []
 # ]
 bitstream-unstable = []
 chainer-unstable = [
+	"iter-unstable",
 	"to-maybeuninit"
 ]
 clock-timer = [
