--- a/Cargo.toml
+++ b/Cargo.toml
@@ -207,7 +207,11 @@ lto = "thin"
 # https://docs.rs/about/metadata
 
 # https://users.rust-lang.org/t/how-to-document-optional-features-in-api-docs/64577
-rustdoc-args = ["--cfg", "docsrs"]
+rustdoc-args = [
+	"--cfg", "docsrs",
+	# this is relying on info found in docs.rs build log, might not be stable
+	"--theme", "/opt/rustwide/workdir/.cargo/rustdoc-custom-theme/meadow.css"
+]
 
 features = [
 	"all",
