--- a/macro/Cargo.toml
+++ b/macro/Cargo.toml
@@ -18,11 +18,7 @@ proc-macro = true
 # https://docs.rs/about/metadata
 
 # https://users.rust-lang.org/t/how-to-document-optional-features-in-api-docs/64577
-rustdoc-args = [
-	"--cfg", "docsrs",
-	# this is relying on info found in docs.rs build log, might not be stable
-	"--theme", "/opt/rustwide/workdir/.cargo/rustdoc-custom-theme/meadow.css"
-]
+rustdoc-args = ["--cfg", "docsrs"]
 
 features = []
 
