can generate random minesweeper board now

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -182,6 +182,7 @@ memory-usage-unstable = [
 	"wiwiwiwiwi/memory-usage-unstable"
 ]
 minesweeper-unstable = [
+	"dep:rand",
 	"chainer-unstable"
 ]
 path-unstable = []
