--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ members = [
 [workspace.package]
 version = "0.7.0-testonly.2"
 edition = "2021"
-authors = ["Meadowsys"]
+authors = ["Meadowsys <meadowsys@kiwin.gay>"]
 repository = "https://github.com/meadowsys/wiwi"
 license = "MIT"
 
@@ -96,6 +96,9 @@ z85 = "3.0.5"
 #
 # It would be good to occasionally check the dependencies too, update them,
 # remove ones that aren't part of any feature anymore, etc
+
+# default = ["path-unstable"]
+default = ["minesweeper-unstable"]
 
 all = [
 	"clock-timer",
