--- a/.github/workflows/feature-check.yml
+++ b/.github/workflows/feature-check.yml
@@ -15,7 +15,7 @@ jobs:
       run: rustc --version
 
     - name: install cargo-hack
-      run: cargo install cargo-hack
+      run: cargo install cargo-hack --verbose
       env:
         # try speed it up a little bit
         # cargo-hack doesn't need to be omega performance,
@@ -23,4 +23,4 @@ jobs:
         RUSTFLAGS: -Copt-level=1 -Clto=false -Ccodegen-units=256
 
     - name: check features individually
-      run: cargo hack check --each-feature
+      run: cargo hack check --verbose --each-feature
