--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -56,11 +56,11 @@ jobs:
 
     - name: publish macro crate
       working-directory: macro
-      run: cargo publish
+      run: cargo publish --verbose
       env:
         CARGO_REGISTRY_TOKEN: ${{ secrets.CARGO_REGISTRY_TOKEN }}
 
     - name: publish
-      run: cargo publish
+      run: cargo publish --verbose
       env:
         CARGO_REGISTRY_TOKEN: ${{ secrets.CARGO_REGISTRY_TOKEN }}
