--- a/.github/workflows/feature-check.yml
+++ b/.github/workflows/feature-check.yml
@@ -20,7 +20,7 @@ jobs:
     # this is so the logs of the first build doesn't get
     # shoved into the first feature that gets built
     - name: build
-      run: cargo build --verbose --features all-unstable
+      run: cargo check --verbose --features all-unstable
 
     - name: check features individually
       run: cargo hack check --verbose --each-feature
