don't need `unstable` in macro crate features
it's only used as dep of main one, users should not be depending on it directly

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -182,7 +182,7 @@ lsl-unstable = [
 	"id-unstable"
 ]
 memory-usage-unstable = [
-	"wiwiwiwiwi/memory-usage-unstable"
+	"wiwiwiwiwi/memory-usage"
 ]
 minesweeper-unstable = [
 	"dep:rand",
