--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ members = [
 ]
 
 [workspace.package]
-version = "0.7.0-testonly.2"
+version = "0.7.0"
 edition = "2021"
 authors = ["Meadowsys <meadowsys@kiwin.gay>"]
 repository = "https://github.com/meadowsys/wiwi"
@@ -38,7 +38,7 @@ keywords = [
 ]
 
 [dependencies]
-wiwiwiwiwi = { path = "macro", version = "=0.7.0-testonly.2" }
+wiwiwiwiwi = { path = "macro", version = "=0.7.0" }
 
 argon2 = { version = "0.5.3", optional = true }
 chacha20poly1305 = { version = "0.10.1", optional = true }
