--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,12 @@ edition = { workspace = true }
 authors = { workspace = true }
 repository = { workspace = true }
 license = { workspace = true }
+exclude = [
+	".cargo",
+	".github",
+	"codecov.yml",
+	"rust-toolchain.toml",
+]
 categories = [
 	# "data-structures" # ?
 	# "internationalization" # ?
