--- a/.github/workflows/publish-docs.yml
+++ b/.github/workflows/publish-docs.yml
@@ -32,6 +32,8 @@ jobs:
       run: |
         set -gx RUSTDOCFLAGS "--cfg docsrs --cfg kiwingay -Z unstable-options --enable-index-page --theme "(pwd)"/.cargo/rustdoc-custom-theme/meadow.css"
         cargo doc --verbose --no-deps --features "all-unstable hashbrown image serde-json" --lib -p wiwi -p wiwiwiwiwi
+      env:
+        KIWINGAY_DEPLOY_COMMIT: ${{ github.sha }}
 
     - name: checkout gh-pages branch
       uses: actions/checkout@ac593985615ec2ede58e132d2e21d2b1cbd6127c # v3.3.0
