--- a/.github/workflows/publish-docs.yml
+++ b/.github/workflows/publish-docs.yml
@@ -31,6 +31,7 @@ jobs:
       shell: fish {0}
       run: |
         set -gx RUSTDOCFLAGS "--cfg docsrs --cfg kiwingay -Z unstable-options --enable-index-page --theme "(pwd)"/.cargo/rustdoc-custom-theme/meadow.css"
+        set -gx KIWINGAY_DEPLOY_COMMIT_SHORT (string sub --length 8 $KIWINGAY_DEPLOY_COMMIT)
         cargo doc --verbose --no-deps --features "all-unstable hashbrown image serde-json" --lib -p wiwi -p wiwiwiwiwi
       env:
         KIWINGAY_DEPLOY_COMMIT: ${{ github.sha }}
